--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set( GUI_CLIENT_EXECUTABLE_NAME Steem )
 set( CUSTOM_URL_SCHEME "gcs" )
 set( INSTALLER_APP_ID "68ad7005-8eee-49c9-95ce-9eed97e5b347" )
 
+set ( BUILD_TESTING 0 )
+
 # http://stackoverflow.com/a/18369825
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
@@ -266,7 +268,7 @@ add_subdirectory( external_plugins )
 add_subdirectory( libraries )
 add_subdirectory( programs )
 
-add_subdirectory( tests )
+#add_subdirectory( tests )
 
 if (ENABLE_INSTALLER)
 
