--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -5,14 +5,15 @@ ENV WORKSPACE /workspace
 ## set workdir
 WORKDIR $WORKSPACE
 
+RUN apt-get update 
+
 # install 
-RUN apt-get install -y \
-    vim \
+RUN apt update && apt-get install -y \
     autoconf \
     automake \
     cmake \
     g++ \
-    git \
+    git \ 
     libbz2-dev \
     libsnappy-dev \
     libssl-dev \
@@ -21,7 +22,8 @@ RUN apt-get install -y \
     pkg-config \
     python3 \
     python3-jinja2 \
-    doxygen 
+    doxygen \
+    vim
 
 RUN apt-get install -y \
     libboost-chrono-dev \
